-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.3.0
-
514fa7e28 (dev)
We already have a generic warning for assigning null to properties that don't support it, so we warn twice:
file:///home/max/qt-dev/dev.build/Foo.qml:3:34: Invalid property assignment: unsupported type "QQuickAnchorLine" - Assigning null to incompatible properties in QML is deprecated. This will become a compile error in future versions of Qt. QQmlApplicationEngine failed to create component file:///home/max/qt-dev/dev.build/Foo.qml:3:16: Cannot assign value null to property horizontalCenter
Let's remove the specialized warning and just keep the generic one.
| For Gerrit Dashboard: QTBUG-102980 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 488550,4 | Remove redundant warning | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |