tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -4489,7 +4489,6 @@ void tst_qqmllanguage::groupAssignmentFailure()
 {
     auto ep = std::make_unique<QQmlEngine>();
     QTest::failOnWarning("QQmlComponent: Component destroyed while completion pending");
-    QTest::ignoreMessage(QtMsgType::QtWarningMsg, QRegularExpression(".*Invalid property assignment: url expected - Assigning null to incompatible properties in QML is deprecated. This will become a compile error in future versions of Qt..*"));
     QQmlComponent component(ep.get(), testFileUrl("groupFailure.qml"));
     QScopedPointer<QObject> o(component.create());
     QVERIFY(!o);
